--- a/desktop/static/pages/Register/style.css
+++ b/desktop/static/pages/Register/style.css
@@ -19,6 +19,11 @@ body {
     text-align: center;
 }
 
+#btnVoltar{
+    display: flex;
+    height: 2rem;
+}
+
 h1 {
     color: #333;
 }
@@ -40,7 +45,33 @@ button:hover {
     background-color: #555;
 }
 
-#btnVoltar{
+.formOptions{
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#sendButtonForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 2rem;
+    width: 5rem;
+}
+
+#opcoes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    width: 5rem;
+}
+
+#meuInputForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 1rem;
+    width: 10rem;
 }
