--- a/desktop/static/pages/Home/style.css
+++ b/desktop/static/pages/Home/style.css
@@ -1,46 +1,7 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+#mainContainer{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-}
-
-.container {
-    width: 50%;
-    height: 60%;
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-h1 {
-    color: #333;
-}
-
-p {
-    color: #666;
-}
-
-button {
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    background-color: #333;
-    color: white;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #555;
-}
-
-#btnVoltar{
-    display: flex;
-    height: 2rem;
+    width: 100%;
+    height: 80vh;   
 }
